--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.22.3",
+    "rss-parser": "^3.13.0",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.2"
   },
