--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,3 @@
-# netlify.toml
-
 [build]
   command = "npm run build"
   publish = "dist"
@@ -9,3 +7,4 @@
   to = "https://irkfrlvddkyjziuvrisb.supabase.co/functions/v1/:splat"
   status = 200
   force = true
+  headers = { Authorization = "Bearer YOUR_SUPABASE_ANON_KEY" }
