--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.30.1",
     "rss-parser": "^3.13.0",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.2"
@@ -34,6 +34,7 @@
     "@types/natural": "^5.1.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
