--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,12 @@
   status = 200
   force = true
   headers = { Authorization = "Bearer YOUR_SUPABASE_ANON_KEY" }
+
+# netlify.toml
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["rss-parser"]
+
+[[scheduled.functions]]
+  name = "fetch_crc_news"
+  cron = "0 * * * *"   # hourly
