--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fuse.js": "^6.6.2",
     "lucide-react": "^0.344.0",
     "natural": "^6.12.0",
+    "nodemailer": "^7.0.5",
     "openai": "^5.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
