--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/natural": "^5.1.5",
+    "@types/nodemailer": "^7.0.11",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
